<resources>
    <string name="app_name">CinemaApp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_launch_screen">LaunchScreenActivity</string>
    <string name="title_activity_sign_in_screen">SignInScreen</string>
    <string name="e_mail">E-mail</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Пароль</string>
    <string name="your_password">Ваш пароль</string>
    <string name="sign_in">Войти</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="favourites">Избранное</string>
    <string name="sets">Подборки</string>
    <string name="discussions">Обсуждения</string>
    <string name="the_magicans">The Magicans</string>
    <string name="lost">LOST</string>
    <string name="the_witcher">The Witcher</string>
    <string name="lucifer">Lucifer</string>
    <string name="_new">Новое</string>
    <string name="witcher">Witcher</string>
    <string name="jessica_jones">Jessica Jones</string>
    <string name="magicians">Magicians</string>

</resources>