<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatListScreen"
    tools:deviceIds="wear"
    android:background="@color/background_screens"
    android:padding="@dimen/box_inset_layout_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discussions"
                android:layout_gravity="center"
                android:textColor="@color/blue_color"
                android:layout_marginTop="23dp"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/lucifer"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/rectangle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/the_witcher"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/rectangle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/lost"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/rectangle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="30dp"
                    android:paddingBottom="22dp"
                    android:text="@string/the_magicans"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>