<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainScreen"
    android:background="@color/background_screens"
    tools:deviceIds="wear">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="9dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/discussionsImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:src="@drawable/ico_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/discussions"
                android:textSize="10.5sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="9dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/setsImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ico_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/sets"
                android:textSize="10.5sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:padding="9dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/favouritesImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:src="@drawable/ico_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/favourites"
                android:textSize="10.5sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </GridLayout>

</androidx.wear.widget.BoxInsetLayout>